Fix #309: aligner le titre des colonnes à droite pour la plateforme de gauche dans le diff

--- a/src/app/diff/diff.css
+++ b/src/app/diff/diff.css
@@ -68,6 +68,6 @@
     color: rgb(255,87,34) !important;;
 }
 
-.diff-left-value > div {
+.diff-left-title > div, .diff-left-value > div {
     text-align:right;
 }
